master - update to action runner.

--- a/action.yml
+++ b/action.yml
@@ -18,7 +18,7 @@ inputs:
     description: 'API branch to run against (default = "development")'
     required: false
     default: 'development'
-  cache_folder: 
+  cache_folder:
     description: 'Dependency cache folder (default = "/tmp/CypressBinary")'
     required: false
     default: '/tmp/CypressBinary'
@@ -41,10 +41,13 @@ inputs:
     description: 'Location where failed cypress screenshots are saved'
     required: false
     default: 'cypress/screenshots'
-
+outputs:
+  something:
+    description: "some kind of output"
+    value: 'this!'
 runs:
-  using: 'composite'
-  steps: 
+  using: "composite"
+  steps:
     - name: Checkout APP
       uses: actions/checkout@v2
       with:
@@ -74,14 +77,14 @@ runs:
           ./app/node_modules
           ${{ inputs.cache_folder }}
         key: ${{ runner.os }}-${{ inputs.cache_name }}-${{ hashFiles('**/yarn.lock') }}
-   
+
     - name: Start DB
       uses: supercharge/mongodb-github-action@1.7.0
       with:
         mongodb-version: '4.4'
 
     - name: Restore DB
-      run: mongorestore ./app/${{ inputs.db_dump_folder }} 
+      run: mongorestore ./app/${{ inputs.db_dump_folder }}
 
     - name: Install pm2
       run: npm i -g pm2
@@ -101,7 +104,7 @@ runs:
         working-directory: ./app
         start: yarn start
         config-file: cypress.config.ts
-        spec: ${{ inputs.spec }} 
+        spec: ${{ inputs.spec }}
         wait-on-timeout: 300
         wait-on: 'http://localhost:3010, http://localhost:8001'
       env:
@@ -115,4 +118,4 @@ runs:
       if: failure()
       with:
         name: cypress-snapshots
-        path: ./app/${{ inputs.screenshots_folder}} 
+        path: ./app/${{ inputs.screenshots_folder}}
