ENG-207 remove local ref

--- a/.github/workflows/test-e2e-action.yml
+++ b/.github/workflows/test-e2e-action.yml
@@ -5,5 +5,5 @@ on:
 
 jobs:
   call-smoke-test-workflow:
-    uses: ./.github/workflows/composite_smoke_test.yml@feature/cypress_record
+    uses: ./.github/workflows/composite_smoke_test.yml
     secrets: inherit
