ENG-207 add default

--- a/.github/workflows/composite_smoke_test.yml
+++ b/.github/workflows/composite_smoke_test.yml
@@ -6,6 +6,7 @@ on:
       local_ref:
         required: true
         type: string
+        default: development
 env:
   ENVIRONMENT: 'local'
   API_BRANCH: 'development'
