ENG-207 access input directly

--- a/.github/workflows/composite_smoke_test.yml
+++ b/.github/workflows/composite_smoke_test.yml
@@ -20,7 +20,6 @@ env:
   CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-  ACTION_REF: ${{ inputs.local_ref }}
 
 jobs:
   install:
@@ -95,7 +94,7 @@ jobs:
       matrix: ${{ fromJson(needs.install.outputs.matrix) }}
     steps:
       - name: E2E Runner - ${{ matrix.name }}
-        uses: united-talent-agency/uta-e2e-runner@${{ env.ACTION_REF }}
+        uses: united-talent-agency/uta-e2e-runner@${{ inputs.local_ref }}
         with: 
           spec: ${{ matrix.spec }}
           pat_token: ${{ env.ACCESS_TOKEN }}
