--- a/.github/workflows/composite_smoke_test.yml
+++ b/.github/workflows/composite_smoke_test.yml
@@ -94,7 +94,7 @@ jobs:
       matrix: ${{ fromJson(needs.install.outputs.matrix) }}
     steps:
       - name: E2E Runner - ${{ matrix.name }}
-        uses: united-talent-agency/uta-e2e-runner
+        uses: .
         with: 
           spec: ${{ matrix.spec }}
           pat_token: ${{ env.ACCESS_TOKEN }}
