--- a/.github/workflows/composite_smoke_test.yml
+++ b/.github/workflows/composite_smoke_test.yml
@@ -93,6 +93,7 @@ jobs:
     strategy:
       matrix: ${{ fromJson(needs.install.outputs.matrix) }}
     steps:
+      - uses: actions/checkout@v3
       - name: E2E Runner - ${{ matrix.name }}
         uses: ./
         with: 
