--- a/action.yml
+++ b/action.yml
@@ -50,6 +50,7 @@ runs:
   using: "composite"
   steps:
     - name: Test step 
+      shell: bash
       run: |
         echo "In ${{ github.ref_name }}"
     - name: Checkout APP
