--- a/.github/workflows/composite_ci.yml
+++ b/.github/workflows/composite_ci.yml
@@ -23,31 +23,24 @@ jobs:
           fetch-depth: 0 # Required due to the way Git works, without it this action won't be able to find any or the correct tags
       - name: 'Get Previous tag'
         id: previoustag
-        uses: "WyriHaximus/github-action-get-previous-tag@v1"
+        uses: oprypin/find-latest-tag@v1
         with:
-          fallback: v1.0.0 # Optional fallback tag to use when no tag can be found
-      - name: 'Get next minor version'
-        id: semvers
-        uses: "WyriHaximus/github-action-next-semvers@v1"
+          repository: united-talent-agency/uta-e2e-runner  # The repository to scan.
+          releases-only: true
+      - name: 'Delete tag'
+        id: deltag
+        uses: cb80/delrel@latest
         with:
-          version: ${{ steps.previoustag.outputs.tag }}
-      - name: 'Create new milestone'
-        id: createmilestone
-        uses: "WyriHaximus/github-action-create-milestone@v1"
-        with:
-          title: ${{ steps.semvers.outputs.v_patch }}
-        env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-
+          tag: ${{ steps.previoustag.outputs.tag }}
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.semvers.outputs.v_patch }}
-          release_name: ${{ steps.createmilestone.title }}
-          body: "E2E Composite release for  ${{ steps.semvers.outputs.v_patch }}"
+          tag_name: ${{ steps.previoustag.outputs.tag }}
+          release_name: ${{ steps.previoustag.outputs.tag }}
+          body: "E2E Composite release for  ${{ steps.previoustag.outputs.tag }}"
           draft: false
           prerelease: false
 
