--- a/.github/workflows/composite_smoke_test.yml
+++ b/.github/workflows/composite_smoke_test.yml
@@ -20,6 +20,7 @@ env:
   CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+  MONGO_DB_VERSION: '5.0'
 
 jobs:
   install:
@@ -50,6 +51,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '16'
+      - name: Start MongoDB
+        uses: supercharge/mongodb-github-action@1.8.0
+        with:
+          mongodb-version: ${{ env.MONGO_DB_VERSION }}
 
       - name: Cache dependencies
         id: cache
