--- a/.github/workflows/composite_smoke_test.yml
+++ b/.github/workflows/composite_smoke_test.yml
@@ -95,10 +95,14 @@ jobs:
       matrix: ${{ fromJson(needs.install.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v3
-      - name: Start MongoDB
-        uses: supercharge/mongodb-github-action@1.8.0
-        with:
-          mongodb-version: ${{ env.MONGO_DB_VERSION }}
+      - name: Install Mongodb
+        run: |
+          sudo apt-get install gnupg
+          wget -qO - https://www.mongodb.org/static/pgp/server-4.2.asc | sudo apt-key add -
+          echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu bionic/mongodb-org/4.2 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-4.2.list
+          sudo apt-get update
+          sudo apt-get install -y mongodb-org
+
       - name: E2E Runner - ${{ matrix.name }}
         uses: ./
         with: 
