TOUR-1149- Updated version tag and ran prettier against the codebase.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "touring-calculations",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Common calculations used in the touring application.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -9,17 +9,20 @@
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
-    "prepare" : "npm run build",
-    "prepublishOnly" : "npm test && npm run lint",
-    "preversion" : "npm run lint",
-    "version" : "npm run format && git add -A src",
-    "postversion" : "git push && git push --tags"
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/skiplist-eng/touring-calculations.git"
   },
-  "keywords": ["Touring", "Calculations"],
+  "keywords": [
+    "Touring",
+    "Calculations"
+  ],
   "author": "L-I",
   "license": "ISC",
   "bugs": {
