--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
-  "name": "touring-calculations",
+  "name": "@united-talent-agency/touring-calculations",
   "version": "1.0.2",
   "description": "Common calculations used in the touring application.",
   "main": "lib/index.js",
+  "author": "united-talent-agency",
   "types": "lib/index.d.ts",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
+  "engines": {
+    "node": ">=16"
+  },
   "scripts": {
     "test": "jest --config jestconfig.json",
     "build": "tsc",
@@ -17,7 +24,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/skiplist-eng/touring-calculations.git"
+    "url": "git+https://github.com/united-talent-agency/touring-calculations.git"
   },
   "keywords": [
     "Touring",
@@ -26,9 +33,9 @@
   "author": "L-I",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/skiplist-eng/touring-calculations/issues"
+    "url": "https://github.com/united-talent-agency/touring-calculations/issues"
   },
-  "homepage": "https://github.com/skiplist-eng/touring-calculations#readme",
+  "homepage": "https://github.com/united-talent-agency/touring-calculations#readme",
   "devDependencies": {
     "@types/jest": "^29.2.3",
     "jest": "^29.3.1",
